--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <p class="msg">All 클리어 목표!</p>
     <div class="row flex-row wrap">
         <dic class="bucket img1 center">몸무게 15kg 감량</dic>
-        <dic class="bucket img2-t2 center">고2 모의고사 내신 1.5이내</dic>
+        <dic class="bucket img2-t2 center">내신 1.5이내</dic>
         <dic class="bucket img2-t2 center">모의고사 국영수 1등급</dic>
         <dic class="bucket img1 center">주말에 1시간이상 줄넘기</dic>
         <dic class="bucket img1 center">온라인에서 그림 전문적으로 배우기</dic>
